build & package gfperf tools and gfiops.

--- a/gfarm_v2/trunk/Makefile.in
+++ b/gfarm_v2/trunk/Makefile.in
@@ -12,7 +12,9 @@ SUBDIRS = \
 	server \
 	gftool \
 	util/ptool \
-	nls 
+	nls \
+	bench/gfperf \
+	bench/gfiops
 
 #	`[ -d $(srcdir)/ns ] && echo ns` \
 #	gfptool \
