--- a/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
@@ -212,6 +212,9 @@
 /* Define to 1 if you have the <sys/types.h> header file. */
 #undef HAVE_SYS_TYPES_H
 
+/* Define to 1 if you have the <sys/xattr.h> header file. */
+#undef HAVE_SYS_XATTR_H
+
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
