Fix typo in a message displayed by 'config-gfarm -t'.

--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm.in
@@ -236,7 +236,7 @@ display_plain_params()
     METADATA_REPLICATION_YN=`tf2yn $METADATA_REPLICATION`
     echo "metadata replication         [-r]: $METADATA_REPLICATION_YN"
     if $METADATA_REPLICATION; then
-        echo "metadata journal dirirectory [-j]: $METADATA_JOURNAL_DIR"
+        echo "metadata journal directory   [-j]: $METADATA_JOURNAL_DIR"
     fi
     echo "metaserver hostname          [-h]: $BACKEND_HOSTNAME"
     echo "matadata admin user          [-A]: $METADATA_ADMIN_USER"
