--- a/gfarm_v2/branches/2.5/gftool/config-gfarm/config-gfarm.in
+++ b/gfarm_v2/branches/2.5/gftool/config-gfarm/config-gfarm.in
@@ -140,7 +140,7 @@ gen_passwd()
 
 usage()
 {
-	echo >&2 "usage: $PROGNAME [--help] [--prefix prefix] [-t] [-f]"
+	echo >&2 "usage: $PROGNAME [--help] [--prefix prefix] [-t|-T] [-f]"
 	echo >&2 "	[-S] [-N] [-W] [-w] [-r]"
 	echo >&2 "	[-h hostname] [-d domain_name] [-m gfmd_port]"
 	echo >&2 "	[-A metadata_admin_user] [-D metadata_admin_gsi_dn]"
@@ -197,13 +197,24 @@ sanity()
 
 # most $BACKEND_TYPE calls the followings
 # from display_backend_params_$BACKEND_TYPE, but some may not.
-display_backend_data_dir_param()
+display_plain_param_backend_data_dir()
 {
-    echo     "metadata     directory    [-l]: $BACKEND_DATA_DIR"
+    echo     "metadata     directory       [-l]: $BACKEND_DATA_DIR"
 }
-display_backend_log_dir_param()
+
+display_script_param_backend_data_dir()
 {
-    echo     "metadata log directory    [-L]: $BACKEND_LOG_DIR"
+    echo     "BACKEND_DATA_DIR=$BACKEND_DATA_DIR"
+}
+
+display_plain_param_backend_log_dir()
+{
+    echo     "metadata log directory       [-L]: $BACKEND_LOG_DIR"
+}
+
+display_script_param_backend_log_dir()
+{
+    echo     "BACKEND_LOG_DIR=$BACKEND_LOG_DIR"
 }
 
 tf2yn()
@@ -214,29 +225,67 @@ tf2yn()
     esac
 }
 
-display_params()
+display_plain_params()
 {
-    echo     "prefix [--prefix]: $CONFIG_PREFIX"
-    echo     "metadata backend    [-b]: $BACKEND_TYPE"
-    echo     "(available backend: $backend_candidates)"
+    echo "prefix                 [--prefix]: $CONFIG_PREFIX"
+    echo "metadata backend             [-b]: $BACKEND_TYPE"
+    echo "(available backend: $backend_candidates)"
 
-    display_backend_params_$BACKEND_TYPE
+    display_plain_params_backend_$BACKEND_TYPE
 
     METADATA_REPLICATION_YN=`tf2yn $METADATA_REPLICATION`
     echo "metadata replication         [-r]: $METADATA_REPLICATION_YN"
     if $METADATA_REPLICATION; then
-        echo "metadata journal dirirectory [-j]: $METADATA_JOURNAL_DIR"
+        echo "metadata journal directory   [-j]: $METADATA_JOURNAL_DIR"
     fi
-    echo     "metaserver hostname [-h]: $BACKEND_HOSTNAME"
-    echo     "matadata admin user [-A]: $METADATA_ADMIN_USER"
-    echo     "matadata admin dn   [-D]: $METADATA_ADMIN_USER_GSI_DN"
+    echo "metaserver hostname          [-h]: $BACKEND_HOSTNAME"
+    echo "matadata admin user          [-A]: $METADATA_ADMIN_USER"
+    echo "matadata admin dn            [-D]: $METADATA_ADMIN_USER_GSI_DN"
 
-    display_backend_port_params_$BACKEND_TYPE
+    display_plain_params_backend_port_$BACKEND_TYPE
 
-    echo     "gfmd port  [-m]: $GFMD_PORT"
-    echo     "auth type  [-a]: $AUTH_TYPE"
+    echo "gfmd port                    [-m]: $GFMD_PORT"
+    echo "auth type                    [-a]: $AUTH_TYPE"
 
-    display_backend_optional_params_$BACKEND_TYPE
+    display_plain_params_backend_optional_$BACKEND_TYPE
+
+    echo "rc script for gfmd               : $RC_DIR/gfmd"
+    echo "rc script for backend            : $RC_DIR/$RC_BACKEND_BASENAME"
+    echo "gfmd conf file                   : $GFMD_CONF"
+    echo "gfarm client conf file           : $GFARM_CONF"
+    echo "gfmd pid file                    : $GFMD_PID_FILE"
+    echo "backend pid file                 : $BACKEND_PID_FILE"
+
+    sanity
+    exit 0
+}
+
+display_script_params()
+{
+    echo     "CONFIG_PREFIX=$CONFIG_PREFIX"
+    echo     "BACKEND_TYPE=$BACKEND_TYPE"
+
+    display_script_params_backend_$BACKEND_TYPE
+
+    echo     "METADATA_REPLICATION=$METADATA_REPLICATION"
+    echo     "METADATA_JOURNAL_DIR=$METADATA_JOURNAL_DIR"
+    echo     "BACKEND_HOSTNAME=$BACKEND_HOSTNAME"
+    echo     "METADATA_ADMIN_USER=$METADATA_ADMIN_USER"
+    echo     "METADATA_ADMIN_USER_GSI_DN=$METADATA_ADMIN_USER_GSI_DN"
+
+    display_script_params_backend_port_$BACKEND_TYPE
+
+    echo     "GFMD_PORT=$GFMD_PORT"
+    echo     "AUTH_TYPE=$AUTH_TYPE"
+
+    display_script_params_backend_optional_$BACKEND_TYPE
+
+    echo     "GFMD_RC=$RC_DIR/gfmd"
+    echo     "BACKEND_RC=$RC_DIR/$RC_BACKEND_BASENAME"
+    echo     "GFMD_CONF=$GFMD_CONF"
+    echo     "GFARM_CONF=$GFARM_CONF"
+    echo     "GFMD_PID_FILE=$GFMD_PID_FILE"
+    echo     "BACKEND_PID_FILE=$BACKEND_PID_FILE"
 
     sanity
     exit 0
@@ -328,7 +377,10 @@ while [ $# -gt 0 ] ; do
 		FORCE=true
 		;;
 	  -t)
-		DISPLAY_PARAMS=true
+		PARAMS_DISPLAY_STYLE=plain
+		;;
+	  -T)
+		PARAMS_DISPLAY_STYLE=script
 		;;
 	  -r)
 		METADATA_REPLICATION=true
@@ -389,11 +441,12 @@ sysdep_defaults
 
 : ${START_SERVICE:=true}
 : ${FORCE:=false}
-: ${DISPLAY_PARAMS:=false}
+: ${PARAMS_DISPLAY_STYLE:=none}
 : ${METADATA_REPLICATION:=false}
 : ${METADATA_REPLICATION_ED:=disable}
 
 : ${RUN_DIR:="$CONFIG_PREFIX/var/run"}
+: ${GFMD_PID_FILE:="$RUN_DIR/gfmd.pid"}
 
 if [ X"$CONFIG_PREFIX" != X ]; then
 	: ${GFARM_CONF_DIR:="$CONFIG_PREFIX/etc"}
@@ -427,8 +480,8 @@ fi
 
 set_last_defaults_$BACKEND_TYPE
 
-# -t option; display parameters
-$DISPLAY_PARAMS && display_params
+# -t and -T options; display parameters
+[ $PARAMS_DISPLAY_STYLE != none ] && display_${PARAMS_DISPLAY_STYLE}_params
 
 sanity || ABORT "aborted"
 
@@ -650,7 +703,7 @@ apply_configuration_$BACKEND_TYPE
 if $START_SERVICE; then
 	service_start_$BACKEND_TYPE
 
-	if [ -f $RUN_DIR/gfmd.pid ]; then ctl=restart; else ctl=start; fi
+	if [ -f $GFMD_PID_FILE ]; then ctl=restart; else ctl=start; fi
 	service_add gfmd &&
 	service_ctl gfmd $ctl ||
 		ABORT "failed to $ctl gfmd"
