add more stub functions for #287 - inter-gfmd RPC forwarding, to reduce redundant code segment for simple cases, discussed with tbaba@-san.

--- a/gfarm_v2/trunk/server/gfmd/Makefile
+++ b/gfarm_v2/trunk/server/gfmd/Makefile
@@ -78,6 +78,6 @@ $(OBJS): $(DEPGFARMINC) \
 	dir.h inode.h fs.h back_channel.h protocol_state.h quota.h xattr.h \
 	journal_file.h db_journal.h db_journal_apply.h \
 	abstract_host.h abstract_host_impl.h \
-	gfmd_channel.h mdhost.h mdcluster.h
+	gfmd_channel.h mdhost.h mdcluster.h relay.h
 
 include $(optional_rule)
