--- a/gfarm_v2/branches/2.5/gftool/config-gfarm/sysdep/default/gfsd.in
+++ b/gfarm_v2/branches/2.5/gftool/config-gfarm/sysdep/default/gfsd.in
@@ -30,6 +30,11 @@ PIDFILE="@config_gfarm_run_dir@/${FILE}.pid"
 OPTIONS="@config_gfarm_gfsd_option@"
 globus_location="@config_gfarm_globus_location@"
 
+# gfsd service certificate
+X509_USER_CERT=/etc/grid-security/@config_gfarm_gfsd_rc_name@/gfsdcert.pem
+X509_USER_KEY=/etc/grid-security/@config_gfarm_gfsd_rc_name@/gfsdkey.pem
+export X509_USER_CERT X509_USER_KEY
+
 if [ -z "${GLOBUS_LOCATION-}" ] && [ -n "$globus_location" ] &&
    [ -f "$globus_location/etc/globus-user-env.sh" ]
 then
