--- a/gfarm_v2/branches/2.5/gftool/config-gfarm/sysdep/freebsd/gfsd.in
+++ b/gfarm_v2/branches/2.5/gftool/config-gfarm/sysdep/freebsd/gfsd.in
@@ -37,6 +37,11 @@ required_files="$CONF"
 command_args="-P $pidfile $OPTIONS"
 globus_location="@config_gfarm_globus_location@"
 
+# gfsd service certificate
+X509_USER_CERT=/etc/grid-security/@config_gfarm_gfsd_rc_name@/gfsdcert.pem
+X509_USER_KEY=/etc/grid-security/@config_gfarm_gfsd_rc_name@/gfsdkey.pem
+export X509_USER_CERT X509_USER_KEY
+
 [ -z "$@config_gfarm_gfsd_rc_var@_enable" ]       && @config_gfarm_gfsd_rc_var@_enable="NO"
 [ -z "$@config_gfarm_gfsd_rc_var@_flags" ]        && @config_gfarm_gfsd_rc_var@_flags=""
 
