--- a/gfarm_v2/trunk/gftool/config-gfarm/sysdep/linux/debian/gfsd.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/sysdep/linux/debian/gfsd.in
@@ -7,7 +7,7 @@ PATH=/sbin:/bin:/usr/sbin:/usr/bin
 NAME=gfsd
 FILE="@config_gfarm_gfsd_rc_name@" # usually "gfsd", or maybe "gfsd-IP_ADDRESS"
 DAEMON="@config_gfarm_prefix@/sbin/$NAME"
-PIDFILE="@config_gfarm_run_dir@/$FILE.pid"
+PIDFILE="@config_gfarm_gfsd_pid_file@"
 CONF="@config_gfarm_gfarm_config@"
 OPTIONS="@config_gfarm_gfsd_option@"
 
