--- a/gfarm_v2/trunk/gftool/config-gfarm/sysdep/netbsd/gfmd.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/sysdep/netbsd/gfmd.in
@@ -18,7 +18,7 @@ name="gfmd"
 FILE=${name}
 rcvar=${name}
 command="@config_gfarm_prefix@/sbin/${name}"
-pidfile="@config_gfarm_run_dir@/${FILE}.pid"
+pidfile="@config_gfarm_gfmd_pid_file@"
 required_files="$CONF"
 # add more flags through ${${name}_flags}
 command_args="-P $pidfile $OPTIONS"
