--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm.in
@@ -169,7 +169,7 @@ ABORT()
 # but some may not.
 service_start_common()
 {
-	if [ -f $RUN_DIR/$RC_BACKEND_BASENAME.pid ]; then
+	if [ -f $BACKEND_PID_FILE ]; then
 		ctl=restart
 	else
 		ctl=start
@@ -500,6 +500,7 @@ s|@config_gfarm_backend_port@|$BACKEND_PORT|g
 s|@config_gfarm_backend_prefix@|$BACKEND_PREFIX|g
 s|@config_gfarm_backend_data_dir@|$BACKEND_DATA_DIR|g
 s|@config_gfarm_backend_log_dir@|$BACKEND_LOG_DIR|g
+s|@config_gfarm_backend_pid_file@|$BACKEND_PID_FILE|g
 s|@config_gfarm_metadb_replication@|$METADATA_REPLICATION_ED|g
 s|@config_gfarm_metadata_journal_dir@|$METADATA_JOURNAL_DIR|g
 _EOF_
@@ -521,6 +522,7 @@ s|@config_gfarm_metadata_admin_user@|$METADATA_ADMIN_USER|g
 s|@config_gfarm_gfmd_port@|$GFMD_PORT|g
 s|@config_gfarm_gfmd_option@|-f $GFMD_CONF|g
 s|@config_gfarm_gfsd_option@|-f $GFARM_CONF|g
+s|@config_gfarm_gfmd_pid_file@|$GFMD_PID_FILE|g
 s|@config_gfarm_run_dir@|$RUN_DIR|g
 s|@config_gfarm_auth_type@|$AUTH_TYPE|g
 _EOF_
