--- a/gfarm_v2/trunk/gftool/config-gfarm/sysdep/default/gfmd.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/sysdep/default/gfmd.in
@@ -9,7 +9,7 @@
 # description: Gfarm filesystem metaserver
 # processname: gfmd
 # config: @config_gfarm_gfmd_config@
-# pidfile: @config_gfarm_run_dir@/gfmd.pid
+# pidfile: @config_gfarm_gfmd_pid_file@
 #
 ## For SuSE/United-Linux style rc.d
 ### BEGIN INIT INFO
@@ -26,7 +26,7 @@ FILE=$PROG
 
 CONF="@config_gfarm_gfmd_config@"
 DAEMON="@config_gfarm_prefix@/sbin/$PROG"
-PIDFILE="@config_gfarm_run_dir@/${FILE}.pid"
+PIDFILE="@config_gfarm_gfmd_pid_file@"
 OPTIONS="@config_gfarm_gfmd_option@"
 globus_location="@config_gfarm_globus_location@"
 warning_facility=local0
