--- a/gfarm_v2/trunk/gftool/config-gfarm/sysdep/freebsd/gfarm-slapd.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/sysdep/freebsd/gfarm-slapd.in
@@ -33,7 +33,7 @@ name="gfarm_slapd"
 rcvar=`set_rcvar`
 
 command="@config_gfarm_openldap_libexec@/slapd"
-pidfile="@config_gfarm_run_dir@/${FILE}.pid"
+pidfile="@config_gfarm_backend_pid_file@"
 required_dirs="@config_gfarm_backend_data_dir@"
 required_files="$CONF"
 # add more flags through ${${name}_flags}
