--- a/gfarm_v2/trunk/gftool/config-gfarm/sysdep/linux/redhat/gfarm-slapd.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/sysdep/linux/redhat/gfarm-slapd.in
@@ -6,7 +6,7 @@
 # description: LDAP slapd for Gfarm
 # processname: slapd
 # config: @config_gfarm_slapd_config@
-# pidfile: @config_gfarm_run_dir@/gfarm-slapd.pid
+# pidfile: @config_gfarm_backend_pid_file@
 
 # Source function library.
 . /etc/rc.d/init.d/functions
@@ -17,7 +17,7 @@ FILE="gfarm-slapd"
 CONF="@config_gfarm_slapd_config@"
 PORT=@config_gfarm_backend_port@
 DAEMON="@config_gfarm_openldap_libexec@/$prog"
-PIDFILE="@config_gfarm_run_dir@/${FILE}.pid"
+PIDFILE="@config_gfarm_backend_pid_file@"
 LOCKFILE="@config_gfarm_lock_dir@/$FILE"
 
 # Get config.
