--- a/gfarm_v2/branches/2.5/gftool/config-gfarm/config-gfarm-update.in
+++ b/gfarm_v2/branches/2.5/gftool/config-gfarm/config-gfarm-update.in
@@ -83,12 +83,12 @@ update_sanity()
 
 # most $BACKEND_TYPE calls the followings
 # from display_backend_params_$BACKEND_TYPE, but some may not.
-display_backend_data_dir_param()
+display_plain_param_backend_data_dir()
 {
     echo     "metadata     directory    [-l]: $BACKEND_DATA_DIR"
 }
 
-display_backend_log_dir_param()
+display_plain_param_backend_log_dir()
 {
     return 0
 }
@@ -106,9 +106,9 @@ display_params()
     echo     "prefix [--prefix]: $CONFIG_PREFIX"
     echo     "metadata backend    [-b]: $BACKEND_TYPE"
 
-    display_backend_params_$BACKEND_TYPE
-    display_backend_port_params_$BACKEND_TYPE
-    display_backend_optional_params_$BACKEND_TYPE
+    display_plain_params_backend_$BACKEND_TYPE
+    display_plain_params_backend_port_$BACKEND_TYPE
+    display_plain_params_backend_optional_$BACKEND_TYPE
 
     update_sanity
     METADATA_REPLICATION_YN=`tf2yn $METADATA_REPLICATION`
@@ -155,7 +155,7 @@ update_first_set_param()
     METADATA_JOURNAL_DIR1=`getvalue metadb_journal_dir`
     : ${METADATA_JOURNAL_DIR:="$METADATA_JOURNAL_DIR1"}
     : ${METADATA_JOURNAL_DIR:="$METADATA_JOURNAL_DIR0"}
-    : ${METADATA_JOURNAL_DIR:="/var/gfarm-metadata/journal"}
+    : ${METADATA_JOURNAL_DIR:="$CONFIG_PREFIX/var/gfarm-metadata/journal"}
 }
 
 #
