Apply the patch r5976 (for 2.5 branch) to the main trunk. This fix solves the defect described as #345.

--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
@@ -83,12 +83,12 @@ update_sanity()
 
 # most $BACKEND_TYPE calls the followings
 # from display_backend_params_$BACKEND_TYPE, but some may not.
-display_backend_data_dir_param()
+display_plain_param_backend_data_dir()
 {
-    echo     "metadata     directory    [-l]: $BACKEND_DATA_DIR"
+    echo     "metadata     directory       [-l]: $BACKEND_DATA_DIR"
 }
 
-display_backend_log_dir_param()
+display_plain_param_backend_log_dir()
 {
     return 0
 }
@@ -103,18 +103,18 @@ tf2yn()
 
 display_params()
 {
-    echo     "prefix [--prefix]: $CONFIG_PREFIX"
-    echo     "metadata backend    [-b]: $BACKEND_TYPE"
+    echo "prefix                 [--prefix]: $CONFIG_PREFIX"
+    echo "metadata backend             [-b]: $BACKEND_TYPE"
 
-    display_backend_params_$BACKEND_TYPE
-    display_backend_port_params_$BACKEND_TYPE
-    display_backend_optional_params_$BACKEND_TYPE
+    display_plain_params_backend_$BACKEND_TYPE
+    display_plain_params_backend_port_$BACKEND_TYPE
+    display_plain_params_backend_optional_$BACKEND_TYPE
 
     update_sanity
     METADATA_REPLICATION_YN=`tf2yn $METADATA_REPLICATION`
-    echo "metadata replication       [-r]: $METADATA_REPLICATION_YN"
+    echo "metadata replication         [-r]: $METADATA_REPLICATION_YN"
     if $METADATA_REPLICATION; then
-        echo "metadata journal directory [-j]: $METADATA_JOURNAL_DIR"
+        echo "metadata journal directory   [-j]: $METADATA_JOURNAL_DIR"
     fi
     exit 0
 }
@@ -155,7 +155,7 @@ update_first_set_param()
     METADATA_JOURNAL_DIR1=`getvalue metadb_journal_dir`
     : ${METADATA_JOURNAL_DIR:="$METADATA_JOURNAL_DIR1"}
     : ${METADATA_JOURNAL_DIR:="$METADATA_JOURNAL_DIR0"}
-    : ${METADATA_JOURNAL_DIR:="/var/gfarm-metadata/journal"}
+    : ${METADATA_JOURNAL_DIR:="$CONFIG_PREFIX/var/gfarm-metadata/journal"}
 }
 
 #
