install sample yml files of gfperf.rb

--- a/gfarm_v2/trunk/bench/gfperf/gfperf-rb/Makefile
+++ b/gfarm_v2/trunk/bench/gfperf/gfperf-rb/Makefile
@@ -6,6 +6,10 @@ srcdir = .
 
 include $(top_srcdir)/makes/var.mk
 
+DATA = $(srcdir)/gfperf-config.yml \
+       $(srcdir)/gfperf-simple.yml
+
 SCRIPTS = $(srcdir)/gfperf.rb
 
 include $(top_srcdir)/makes/script.mk
+include $(top_srcdir)/makes/data.mk
