--- a/gfarm_v2/trunk/bench/gfperf/gfperf-rb/Makefile
+++ b/gfarm_v2/trunk/bench/gfperf/gfperf-rb/Makefile
@@ -6,6 +6,8 @@ srcdir = .
 
 include $(top_srcdir)/makes/var.mk
 
+datadir=$(default_datadir)/gfarm/config
+
 DATA = $(srcdir)/gfperf-config.yml \
        $(srcdir)/gfperf-simple.yml
 
