'gfservice' no longer executes 'gfhost', 'gfmdhost' or 'gfkey' directly. The commands are now invoked by 'gfservice-agent'.
The change makes for an administrator to set up 'gfservice' easier.
In 'sudoers' file, only 'gfservice-agent' is needed to be registered as
a permitted command  (ticket #331).

--- a/gfarm_v2/trunk/util/gfservice/gfservice-agent.in
+++ b/gfarm_v2/trunk/util/gfservice/gfservice-agent.in
@@ -1080,6 +1080,26 @@ subcmd_restore_backend_db()
 	log_debug "end subcmd_restore_backend_db"
 }
 
+#
+# Sub-command: gfcmd
+# Exec gf* command.
+#
+subcmd_gfcmd()
+{
+	log_debug "subcmd_gfcmd"
+
+	[ $# -eq 0 ] && log_error "missing command name for 'gfcmd'"
+	GFCMD="$1"
+	shift
+	expr "X$GFCMD" : '^Xgf[a-z0-9._-]*$' > /dev/null 2>&1 || {
+		log_error "invalid command name: '$GFCMD'"
+	}
+	log_debug "subcmd_gfcmd: execute @bindir@/$GFCMD $@"
+	"@bindir@/$GFCMD" "$@"|| log_error "failed to execute $GFCMD"
+
+	log_debug "end subcmd_gfcmd"
+}
+
 ######################################################################
 
 #
@@ -1237,6 +1257,9 @@ restore-shared-key)
 	;;
 restore-backend-db)
 	subcmd_restore_backend_db
+	;;
+gfcmd)
+	subcmd_gfcmd "$@"
 	;;
 *)	echo "$0@$PROGHOST: invalid sub-command: $SUBCMD" 1>&2
 	exit 1
