--- a/gfarm_v2/trunk/gftool/gfprep/Makefile
+++ b/gfarm_v2/trunk/gftool/gfprep/Makefile
@@ -6,15 +6,17 @@ srcdir = .
 
 include $(top_srcdir)/makes/var.mk
 
+GFREP_SRCDIR = $(srcdir)/../gfrep
+
 SRCS = gfprep.c gfarm_list.c gfarm_parallel.c gfarm_dirtree.c gfarm_fifo.c \
 	gfarm_pfunc.c
 OBJS = gfprep.o gfarm_list.o gfarm_parallel.o gfarm_dirtree.o gfarm_fifo.o \
 	gfarm_pfunc.o
-EXTRA_CLEAN_TARGETS = gfarm_list.c gfarm_list.h
+EXTRA_CLEAN_TARGETS = gfarm_list.c
 PROGRAM = gfprep
 GFPCOPY = gfpcopy
 CFLAGS = $(COMMON_CFLAGS) -I$(GFUTIL_SRCDIR) -I$(GFARMLIB_SRCDIR) \
-	$(openssl_includes)
+	-I$(GFREP_SRCDIR) -I$(srcdir) $(openssl_includes)
 LDLIBS = $(COMMON_LDFLAGS) $(GFARMLIB) $(LIBS)
 DEPLIBS = $(DEPGFARMLIB)
 
@@ -25,13 +27,13 @@ post-install-hook:
 	ln $(DESTDIR)$(bindir)/$(PROGRAM) $(DESTDIR)$(bindir)/$(GFPCOPY)
 
 gfarm_list.c:
-	ln -s ../gfrep/gfarm_list.c .
+	ln -s $(srcdir)/../gfrep/gfarm_list.c .
 
-gfarm_list.h:
-	ln -s ../gfrep/gfarm_list.h .
+distclean:
+	-$(RM) -f gfarm_list.c
 
 include $(top_srcdir)/makes/prog.mk
 
 ###
 
-$(OBJS): $(DEPGFARMINC) $(GFARMLIB_SRCDIR)/config.h $(GFARMLIB_SRCDIR)/gfm_client.h $(GFUTIL_SRCDIR)/gfutil.h $(GFUTIL_SRCDIR)/hash.h $(GFARMLIB_SRCDIR)/host.h $(GFARMLIB_SRCDIR)/lookup.h $(GFUTIL_SRCDIR)/thrsubr.h $(GFUTIL_SRCDIR)/queue.h $(GFARMLIB_SRCDIR)/gfs_pio.h gfarm_list.h gfprep.h gfarm_parallel.h gfarm_dirtree.h gfarm_fifo.h gfarm_pfunc.h
+$(OBJS): $(DEPGFARMINC) $(GFARMLIB_SRCDIR)/config.h $(GFARMLIB_SRCDIR)/gfm_client.h $(GFUTIL_SRCDIR)/gfutil.h $(GFUTIL_SRCDIR)/hash.h $(GFARMLIB_SRCDIR)/host.h $(GFARMLIB_SRCDIR)/lookup.h $(GFUTIL_SRCDIR)/thrsubr.h $(GFUTIL_SRCDIR)/queue.h $(GFARMLIB_SRCDIR)/gfs_pio.h $(GFREP_SRCDIR)/gfarm_list.h gfprep.h gfarm_parallel.h gfarm_dirtree.h gfarm_fifo.h gfarm_pfunc.h
