--- a/gfarm_v2/trunk/util/gfservice/gfservice-agent.in
+++ b/gfarm_v2/trunk/util/gfservice/gfservice-agent.in
@@ -839,13 +839,13 @@ subcmd_mount()
 {
 	log_debug "subcmd_mount"
 
-	DIR=`get_param dir` || {
-		log_error "missing mandatory argument 'dir'"
+	DIRECTORY=`get_param directory` || {
+		log_error "missing mandatory argument 'directory'"
 	}
-	log_debug "subcmd_mount: dir=$DIR"
+	log_debug "subcmd_mount: directory=$DIRECTORY"
 	OPTIONS=`get_param options || echo ''`
 	log_debug "subcmd_mount: options=$OPTIONS"
-	gfarm2fs $DIR $OPTIONS
+	gfarm2fs $DIRECTORY $OPTIONS
 	[ $? -ne 0 ] && log_error "failed to mount Gfarm2 filesystem"
 
 	log_debug "end subcmd_mount"
@@ -859,11 +859,11 @@ subcmd_unmount()
 {
 	log_debug "subcmd_unmount"
 
-	DIR=`get_param dir` || {
-		log_error "missing mandatory argument 'dir'"
+	DIRECTORY=`get_param directory` || {
+		log_error "missing mandatory argument 'directory'"
 	}
-	log_debug "subcmd_unmount: dir=$DIR"
-	fusermount -u $DIR
+	log_debug "subcmd_unmount: directory=$DIRECTORY"
+	fusermount -u $DIRECTORY
 	[ $? -ne 0 ] && log_error "failed to unmount Gfarm2 filesystem"
 
 	log_debug "end subcmd_unmount"
