--- a/gfarm_v2/trunk/regress/server/gfmd/db_journal/Makefile
+++ b/gfarm_v2/trunk/regress/server/gfmd/db_journal/Makefile
@@ -54,6 +54,7 @@ SRCS = \
 	$(GFMD_SRCDIR)/watcher.c \
 	$(GFMD_SRCDIR)/xattr.c \
 	$(GFMD_SRCDIR)/relay.c \
+	$(GFMD_SRCDIR)/fsngroup_replica.c \
 	db_journal_apply_test.c empty_ops.c
 
 OBJS =	\
@@ -87,6 +88,7 @@ OBJS =	\
 	$(GFMD_BUILDDIR)/watcher.o \
 	$(GFMD_BUILDDIR)/xattr.o \
 	$(GFMD_BUILDDIR)/relay.o \
+	$(GFMD_BUILDDIR)/fsngroup_replica.o \
 	db_journal_test.o empty_ops.o
 
 all: $(PROGRAM)
