--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man1/Makefile.inc
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man1/Makefile.inc
@@ -42,7 +42,9 @@ DOCBOOK = \
 	gfperf-parallel-autoreplica.1 \
 	gfperf-wrapper.sh.1 \
 	gfperf.rb.1 \
-	gfstress.rb.1
+	gfstress.rb.1 \
+	gfservice.1 \
+	gfservice-agent.1
 
 #	gfarm_agent.1 \
 #	gfcd.1 \
