Minor changes of 'gfservice' (ticket: #331):  - Pass '-S' option to 'config-gfarm' command in case that the shell variable    'gfmdn_PRIVATE_MODE' is set to 'true'.  - Pass '-S' option to 'config-gfsd' command in case that the shell variable    'gfsdn_PRIVATE_MODE' is set to 'true'.  - Delete a shared secret key file when 'unconfig-client' sub-command is    performed as described in the document of 'gfservice'.

--- a/gfarm_v2/trunk/util/gfservice/gfservice-agent.in
+++ b/gfarm_v2/trunk/util/gfservice/gfservice-agent.in
@@ -809,6 +809,7 @@ subcmd_unconfig_client()
 
 	set_client_params
 	rm -f $GFARM_CONF
+	rm -f $SHARED_KEY_FILE
 
 	log_debug "end subcmd_unconfig_client"
 }
