o Ticket #343: Almost implemented fsngroup/replicainfo based 	  file replication. Two more steps to go: a) actual 	  replication scheduling. b) replicainfo canonicalization.

--- a/gfarm_v2/trunk/regress/server/gfmd/db_journal/Makefile
+++ b/gfarm_v2/trunk/regress/server/gfmd/db_journal/Makefile
@@ -55,6 +55,7 @@ SRCS = \
 	$(GFMD_SRCDIR)/xattr.c \
 	$(GFMD_SRCDIR)/relay.c \
 	$(GFMD_SRCDIR)/fsngroup_replica.c \
+	$(GFMD_SRCDIR)/fsngroup.c \
 	db_journal_apply_test.c empty_ops.c
 
 OBJS =	\
@@ -89,6 +90,7 @@ OBJS =	\
 	$(GFMD_BUILDDIR)/xattr.o \
 	$(GFMD_BUILDDIR)/relay.o \
 	$(GFMD_BUILDDIR)/fsngroup_replica.o \
+	$(GFMD_SRCDIR)/fsngroup.o \
 	db_journal_test.o empty_ops.o
 
 all: $(PROGRAM)
