--- a/gfarm_v2/trunk/regress/server/gfmd/db_journal/Makefile
+++ b/gfarm_v2/trunk/regress/server/gfmd/db_journal/Makefile
@@ -90,7 +90,7 @@ OBJS =	\
 	$(GFMD_BUILDDIR)/xattr.o \
 	$(GFMD_BUILDDIR)/relay.o \
 	$(GFMD_BUILDDIR)/fsngroup_replica.o \
-	$(GFMD_SRCDIR)/fsngroup.o \
+	$(GFMD_BUILDDIR)/fsngroup.o \
 	db_journal_test.o empty_ops.o
 
 all: $(PROGRAM)
