it seems LT_INIT is not indispensable.  use AC_PROG_LIBTOOL for older libtool, even though it is obsolete now

--- a/gfarm2fs/trunk/configure.ac
+++ b/gfarm2fs/trunk/configure.ac
@@ -13,7 +13,7 @@ AC_SYS_LARGEFILE
 
 # Checks for programs.
 AC_PROG_CC
-LT_INIT
+AC_PROG_LIBTOOL
 
 ### --with-gfarm=GFARM_ROOT
 AC_MSG_CHECKING([for Gfarm file system])
